# libdsp-x15

./: .gitignore  .travis.yml  README.md
code/: .cproject  .gitignore  AudioAPI.cpp  AudioAPI.hpp  JACKClient.cpp  JACKClient.hpp  JackClient.cpp  Makefile  X15_lib_audio  audio_kernel.cl  audiokernel.cl  bb-dsp-lib  dsplib.ae66  main.cpp  make.inc
code/DSP_Synth/: .gitignore  (+10 more)
code/libdsp-x15/: .gitignore  API.cpp  API.hpp  CMakeLists.txt  CallbackResponse.cpp  CallbackResponse.h  CallbackResponse.hpp  ConfigOps.cpp  ConfigOps.hpp  DspTask.cpp  DspTask.h  DspTaskFactory.cpp  DspTaskFactory.h  FFT_SP.cpp  FFT_SP.h  FilterBiquadSP.cpp  FilterBiquadSP.h  IFFT_SP.cpp  IFFT_SP.h  Makefile  TaskProcessor.cpp  TaskProcessor.h  audiokernel.cl  dsplib.ae66  library.cpp  library.h
docs/: Doxyfile  libdsp-x15-doxygen  opencl.md  pins.md
html/: API_8hpp_source.html  CallbackResponse_8h_source.html  CallbackResponse_8hpp_source.html  ConfigOps_8hpp_source.html  DspTaskFactory_8h_source.html  DspTask_8h_source.html  FFT__SP_8h_source.html  FilterBiquadSP_8h_source.html  IFFT__SP_8h_source.html  TaskProcessor_8h_source.html  annotated.html  classAPI.html  classCallbackResponse.html  classConfigOps.html  classDspTask.html  classDspTaskFactory.html  classFFT__SP.html  classFilterBiquadSP.html  classIFFT__SP.html  classTaskProcessor.html  classes.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  library_8h_source.html
test/: .gitignore  FFT_Plot.m  FILTER_BIQUAD_Plot.m  IFFT_Error_Search.m  octave-workspace
(+133 files in other folders)
